# lorebridge_open

./: CLAUDE.md  PROJECT_STRUCTURE.md  STREAMING_API_DEPLOYMENT_GUIDE.md  docker-compose.yml  vercel.json
client/: .env.local.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
client/app/: globals.css  layout.tsx  page.tsx
client/components/: BoardsView.tsx  ChatComponent.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatWidget.tsx  DashboardLayout.tsx  DeleteConfirmationModal.tsx  EditGraphModal.tsx  EmojiColorExtractor.tsx  EnsureUserInDBClient.tsx  FavoritesView.tsx  GraphCard.tsx  MarkdownRenderer.tsx  NodeLimitDisplay.tsx  NotificationProvider.tsx  OnboardingWrapper.tsx  PDFViewer.tsx  ProcessingOptionsModal.tsx  RAGDetails.tsx  RAGSummary.tsx  RecentView.tsx  Sidebar.tsx  SourcesBox.tsx  SubscriptionButton.tsx  SubscriptionStatus.tsx  TableRenderer.tsx  TrialBanner.tsx  UserProfile.tsx  VirtualizedContent.tsx  WebSearchDetails.tsx  WebSearchSummary.tsx  WhiteBoardView.tsx
client/hooks/: useOnboardingStatus.ts
client/lib/: api.ts  apiBase.ts  chatMessagesCache.ts  emojiColors.ts  logger.ts  performanceMonitor.ts  stripe.ts  useApiClient.ts  useChatAPI.ts  useChatStream.ts  useEnsureUserInDB.ts  useGraphs.ts  useRecentGraphs.ts  useSubscription.ts  (+2 more)
extension/: README.md  background.js  chat-extractors.js  content.js  manifest.json  popup.html  popup.js  welcome.html
python-transcript-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  openapi.yml  requirements.txt  serve_docs.py  test_api.py
server/: .env.example  .gitignore  ASYNC_PDF_TOOL_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_IMPROVEMENTS.md  DATABASE_OPTIMIZATION.md  DEPLOYMENT_FIXES.md  Dockerfile  MONITORING.md  PDF_RAG_DEBUGGING_REPORT.md  PDF_VECTORIZATION_IMPLEMENTATION_PLAN.md  README.md  SECURITY_IMPROVEMENTS.md  alembic.ini  docker-compose.yml  loki-config.yml  otel-collector-config.yaml  prometheus.yml  promtail-config.yml  pyproject.toml  test_async_pdf_tool.py
server/app/: main.py
server/app/agents/: my_strand_agent.py
server/app/alembic/: env.py
server/app/alembic/versions/: 0922cff1a8dd_add_cascade_delete_to_chat_messages.py  21965d4025e9_add_not_null_constraints_to_.py  249b00780aee_add_stripe_subscription_fields_to_user.py  2dba6d7351bd_add_cascade_delete_to_edges.py  3093073350ed_add_vector_db_fields_to_asset.py  318a42f56b87_add_website_enum.py  3ea31480e540_add_source_handle_and_target_handle_to_.py  42ba7c749b5c_add_user_id_to_assets.py  43972a1333f6_add_emoji_and_description_to_graphs.py  5748a7b596c1_add_file_path_column_to_asset_model.py  58dffec79c8b_initial_setup.py  816775820e80_add_context_message_source.py  a568035c1b96_add_subscription_defaults.py  ac6a8b575ed6_add_pdf_processing_fields_to_asset_model.py  add_color_field_to_graphs.py  add_descriptive_text_to_artefacts.py  add_processing_fields_to_artefacts.py  add_user_id_to_artefacts.py  add_youtube_instagram_enum.py  c477b9cd6a57_add_last_accessed_at_to_graphs.py  caa0dd0687ea_add_favorite_field_to_graphs.py  cdd4c3667539_add_tool_output_to_chat_message.py  cf51717dd7d1_add_website_enum.py  e7f2d992db1c_add_website_enum.py  fix_colors_field_cleanup.py  update_color_to_colors_field.py
server/app/api/v1/endpoints/: __init__.py  agent_routes.py  artefact_routes.py  asset_routes.py  chat_routes.py  edge_routes.py  graph_routes.py  health_routes.py  langchain_llm.py  llm.py  node_routes.py  stripe_webhook.py  subscription_routes.py  user_routes.py  webhook_routes.py
server/app/core/: auth.py  auth_decorators.py  config.py  dependencies.py  exceptions.py  logger.py  logging_middleware.py  rate_limiter.py  security.py  security_utils.py
server/app/db/: database.py  session.py
server/app/db/models/: __init__.py  artefact.py  asset.py  chat_message.py  chat_session.py  edge.py  graph.py  llm_message.py  node.py
server/app/models/: user.py
server/app/schemas/: __init__.py  agent.py  common.py  langchain.py  user.py
server/app/services/: __init__.py  async_db_service.py  dependencies.py  interfaces.py  metrics.py  user_limits.py
server/app/services/ai/: __init__.py  llm_input_preparation_service.py  llm_manager.py  paraphrasing_service.py  summarization_service.py
server/app/services/assets/: asset_service_factory.py  background_processor.py  base_asset_service.py  media_asset_service.py  pdf_asset_service.py  website_asset_service.py
server/app/services/content/: __init__.py  firecrawl_service.py
server/app/services/export/: TABLE_GENERATION_IMPROVEMENTS.md  __init__.py  artefact_description_service.py  md_export_service.py  mermaid_export_service.py  processing_options_service.py  table_export_service.py
server/app/services/infrastructure/: __init__.py  edge_service.py
server/app/services/langchain_services/: README_LANGCHAIN_MODULARIZATION.md  agent_service.py  background_rag_service.py  chat_persistence_service.py  context_formatter_service.py  langchain_agent_service.py  langchain_chat_service.py  streaming_service.py
server/app/services/payment/: __init__.py  stripe_service.py
server/app/services/processing/: __init__.py  context_transfer_service.py  stream_processing_service.py
server/app/services/providers/: base.py  openai.py
server/app/services/rag_services/: chunking_service.py  dynamic_tool_factory.py  embedding_service.py  file_storage_service.py  pdf_processing_service.py  pdf_qa_service.py  pdf_qa_tool.py  pdf_summary_service.py  rag_service.py  vector_database_service.py
server/app/services/session/: __init__.py  session_validation_service.py
server/app/tests/: conftest.py  test_asset_routes.py  test_graph_routes.py  test_main.py  test_services.py  test_user_routes.py
server/grafana/provisioning/dashboards/: dashboards.yml  fastapi-overview.json  llm-and-domain-metrics.json
server/grafana/provisioning/datasources/: datasources.yml
server/patches/: README.md  apply_firecrawl_fix.sh  firecrawl-py-pydantic-v2-fix.patch  test_patches.py
server/scripts/: dev_tools.py
(+95 files in other folders)
